--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.17.0"
+  },
   "private": true,
   "dependencies": {
     "@emotion/core": "^11.0.0",
